[refactor]using channel instead of cond locker in player send queue

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -34,3 +34,7 @@ ts_duration_second=6
 
 ;key为拉流时的自定义路径，value为ffmpeg转码格式，比如可设置为-c:v copy -c:a copy，表示copy源格式；default表示使用ffmpeg内置的输出格式，会进行转码。
 /stream_265=default
+
+[rtp]
+; RTP发送缓冲队列长度(单位：包)
+send_queue_length=128
