[feature]support audio two channel

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -6,6 +6,9 @@ default_password=admin
 [rtsp]
 port=554
 
+; SOCKET 系统缓存大小
+network_buffer=262144
+
 ; rtsp 超时时间，包括RTSP建立连接与数据收发。
 timeout=28800
 
@@ -23,18 +26,20 @@ authorization_enable=0
 save_stream_to_local=0
 
 ;easydarwin使用ffmpeg工具来进行存储。这里表示ffmpeg的可执行程序的路径
-ffmpeg_path=/Users/ze/Downloads/ffmpeg-20180719-9cb3d8f-macos64-shared/bin/ffmpeg
+ffmpeg_path=ffmpeg
 
 ;本地存储所将要保存的根目录。如果不存在，程序会尝试创建该目录。
-m3u8_dir_path=/Users/ze/Downloads/EasyDarwinGoM3u8
+m3u8_dir_path=/home/raininfall/d/fdd/easy
 
 ;切片文件时长。本地存储时，将以该时间段为标准来生成ts文件(该时间+一个I帧间隔)，单位秒。
 ;如果需要直播，这个值设小点，但是这样会产生很多ts文件；如果不需要直播，只要存储的话，可设大些。
-ts_duration_second=6
+ts_duration_second=12
 
 ;key为拉流时的自定义路径，value为ffmpeg转码格式，比如可设置为-c:v copy -c:a copy，表示copy源格式；default表示使用ffmpeg内置的输出格式，会进行转码。
-/stream_265=default
+;stream_265=default
 
 [rtp]
+; RTP over UDP 包最大长度
+rtp_max_size=1200
 ; RTP发送缓冲队列长度(单位：包)
-send_queue_length=128
+send_queue_length=512
