[refactor]interface-ize player

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -12,8 +12,9 @@ network_buffer=262144
 ; rtsp 超时时间，包括RTSP建立连接与数据收发。
 timeout=28800
 
+; 使用gop现在音频上有BUG
 ; 是否使能gop cache。如果使能，服务器会缓存最后一个I帧以及其后的非I帧，以提高播放速度。但是可能在高并发的情况下带来内存压力。
-gop_cache_enable=1
+gop_cache_enable=0
 
 ; 新的session连接时，如果已有同一个PATH的session在推流，则关闭之前的。
 close_old=0
