[refactor] remove some gcc compiled modules

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -2,6 +2,11 @@
 port=10008
 default_username=admin
 default_password=admin
+static=./www
+
+[database]
+type=mysql
+url="""root:rsu123;@tcp(30.26.5.1)/record?charset=utf8&parseTime=True&loc=Local"""
 
 [rtsp]
 port=554
@@ -37,10 +42,22 @@ m3u8_dir_path=/home/raininfall/d/fdd/easy
 ts_duration_second=12
 
 ;key为拉流时的自定义路径，value为ffmpeg转码格式，比如可设置为-c:v copy -c:a copy，表示copy源格式；default表示使用ffmpeg内置的输出格式，会进行转码。
-;stream_265=default
+;/stream_265=default
 
 [rtp]
 ; RTP over UDP 包最大长度
 rtp_max_size=1200
-; RTP发送缓冲队列长度(单位：包)
+
+[player]
+; 发送缓冲队列长度(单位：包)
 send_queue_length=512
+
+[record]
+; 录像缓冲队列长度(单位：RTP包)
+receive_queue_length=128
+
+storage_path=/mnt/d/fdd/easy/1
+storage_path=/mnt/d/fdd/easy/2
+
+[log]
+level=debug
