--- a/rtsp/record/easydarwin.ini
+++ b/rtsp/record/easydarwin.ini
@@ -59,9 +59,10 @@ redis_password=""
 redis_db=0
 
 ; 录像缓冲队列长度(单位：RTP包)
-receive_queue_length=128
+write_queue_length=128
 
-storage_path=D:/fdd/easy/1,D:/fdd/easy/2
+storage_path=/mnt/d/fdd/easy/1
+storage_path=/mnt/d/fdd/easy/2
 storage_scan_internal=30
 
 [log]
