[refactor] remove mysql dependcy

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -4,9 +4,10 @@ default_username=admin
 default_password=admin
 static=./www
 
-[database]
-type=mysql
-url="""root:rsu123;@tcp(30.26.5.1)/record?charset=utf8&parseTime=True&loc=Local"""
+[redis]
+host="127.0.0.1:6380"
+# password="" 
+db=0
 
 [rtsp]
 port=554
