--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -39,3 +39,9 @@ ts_duration_second=6
 
 ;key为拉流时的自定义路径，value为ffmpeg转码格式，比如可设置为-c:v copy -c:a copy，表示copy源格式；default表示使用ffmpeg内置的输出格式，会进行转码。
 /stream_265=default
+
+;tls配置，证书需使用绝对路径
+[tls]
+enable=true
+cert=/home/ubuntu/cert/STAR_turingvideo_com.bundle
+key=/home/ubuntu/cert/turingvideo.key
