add 30 sec timeout to stop idle video stream (#2)
* add 30 sec timeout to stop idle video stream

* modify variable name

* remove empty line

--- a/easydarwin.ini
+++ b/easydarwin.ini
@@ -40,6 +40,9 @@ ts_duration_second=6
 ;key为拉流时的自定义路径，value为ffmpeg转码格式，比如可设置为-c:v copy -c:a copy，表示copy源格式；default表示使用ffmpeg内置的输出格式，会进行转码。
 /stream_265=default
 
+;没有观众观看直播多少秒，直播关闭
+check_no_connection_interval=30
+
 ;tls配置，证书需使用绝对路径
 [tls]
 enable=true
